@startuml
hide circle
skinparam linetype ortho

entity "User" as user {
  *id_user : auto_increment
  email : varchar(255)
}

entity "Login" as login {
  *id_login : auto_increment
  username : varchar(32)
  password : varchar(32)
  role : varchar(32)
  last_login : date
  FK id_user
}

entity "Album" as album {
  *id_album : auto_increment
}

entity "Team" as team {
  *id_team : id
  name : varchar(32)
  shield : varchar(255)
}

entity "Coach" as coach {
  *id_coach : id
  name : varchar(32)
  lastname : varchar(32)
  FK id_team
}

entity "Player" as player {
  *id_player : id
  name : varchar(32)
  lastname : varchar(32)
  position : varchar(32)
  age : int(60)
  goals : int(255)
  FK id_team
}

user||..o{login
user||..||album
player}o..o{album
team||..|{player
coach}|..||team
@enduml
